lection-6/cert-manager/test-deployment/deployment-ssl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-test-deployment
  namespace:  test
spec:
  selector:
    matchLabels:
      app: ssl-test-deployment
  template:
    metadata:
      labels:
        app: ssl-test-deployment
    spec:
      containers:
      - name: ssl-test-deployment
        image: nginx:latest
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash", "-c", "echo 'you are checking domain ssl-test.kubernetes.coach' > /usr/share/nginx/html/index.html"]
